added embeded mcrypt

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ endif
 
 .SUFFIXES: .c .so .xo .o
 
-all: cryptomodule.so simplecrypto.so mcrypto.so
+all: cryptomodule.so simplecrypto.so mcrypto.so cryptomodulemc.so
 
 .c.xo:
         $(CC) -I. $(CFLAGS) $(SHOBJ_CFLAGS) -fPIC -c $< -o $@
@@ -32,6 +32,9 @@ simplecrypto.so: simplecrypto.xo
 mcrypto.xo: redismodule.h
 
 mcrypto.so: mcrypto.xo
+        $(LD) -o $@ $< $(SHOBJ_LDFLAGS) $(LIBS) -lc -lmcrypt
+
+cryptomodulemc.so: cryptomodulemc.xo
         $(LD) -o $@ $< $(SHOBJ_LDFLAGS) $(LIBS) -lc -lmcrypt
 
 clean:
